--- a/SignUp/Base.lproj/Main.storyboard
+++ b/SignUp/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,6 +35,7 @@
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ASS-mv-Y0a">
                                         <rect key="frame" x="0.0" y="104" width="300" height="44"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="coe-v0-l30"/>
                                         </constraints>
@@ -42,13 +44,19 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="dKQ-JO-dQd" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.8" id="BRe-74-stM"/>
                             <constraint firstItem="dKQ-JO-dQd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="e8W-3T-JK3"/>
                             <constraint firstItem="dKQ-JO-dQd" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zLw-a4-Q4L"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="emailField" destination="cTk-IH-nr6" id="qP7-3b-04L"/>
+                        <outlet property="loginButton" destination="ASS-mv-Y0a" id="yR8-Vb-btC"/>
+                        <outlet property="passwordField" destination="mNE-Yl-iVH" id="8d0-Uz-SfE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
